replaced div with section

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <header></header>
-<div class="banner">
+<section class="banner">
     <div class="container">
         <a href="#" title="logo"><img src="images/logo.png" alt="logo"></a>
     </div>
@@ -21,8 +21,8 @@
         <a href="#" title="Twitter" target="_blank"><i class="fab fa-twitter"></i></a>
     </div>
 
-</div>
-<div class="content">
+</section>
+<section class="content">
     <h1>
         Video Title
     </h1>
@@ -38,7 +38,7 @@
             facere iusto magni neque, tempore unde voluptas voluptates?
         </p>
     </div>
-</div>
+</section>
 <footer></footer>
 </body>
 </html>
